More changes to clean up billing